--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,41 @@
+/* BODY */
+body {
+  background-color: #AEAEAE;
+  margin: 0;
 
+}
+
+/* SITE WRAPPER  */
+.wrapper {
+  margin: 0auto;
+  width: 80%;
+
+}
+
+/* SITE HEADER */
+.header {
+  background-color: #E7E5E6;
+  padding: 30px;
+}
+.header .logo {
+background-color: #AEAEAE;
+display: inline-block;
+font-size: 48px;
+padding: 15px 50px;
+text-transform: uppercase;
+}
+
+/* SITE NAVIGATION */
+.navigation {
+  background-color: #A5A3A4;
+}
+
+.navigation ul {
+  margin: 0;
+  padding-left: 0;
+}
+
+.navigation li {
+  display: inline-block;
+  padding: 15px 25px;
+}
