--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,52 @@ text-transform: uppercase;
   display: inline-block;
   padding: 15px 25px;
 }
+
+.navigation a{
+color: #fff;
+text-decoration: none;
+text-transform: uppercase;
+}
+
+/* MAIN DIV  */
+.main {
+  background-color: #F3EFF0;
+  float: left;
+  min-height: 600px;
+  width: 70%;
+}
+
+.main h1 {
+  padding-left: 35px;
+}
+
+.main p{
+padding-left: 5px 35px;
+
+}
+
+/* SIDEBAR DIV  */
+.sidebar {
+  background-color: #CECCCD;
+  float: left;
+  min-height: 600PX;
+  width: 30%;
+}
+
+.sidebar h2{
+  padding-left: 20px;
+}
+
+/* SITE FOOTER  */
+.footer {
+  clear: left;
+  background-color: #514F50;
+  font-size: 14px;
+  padding: 9px 0;
+}
+
+.footer p {
+  margin: 0;
+  color: #FFFFFF;
+  padding-left: 35PX;
+}
